--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 !ProjectFiles/
 !DesignTimeNodes/
 ProjectFiles/NetSolution/*.vs
+ProjectFiles/NetSolution/*.vscode
 ProjectFiles/NetSolution/bin
 ProjectFiles/NetSolution/obj
 ProjectFiles/NetSolution/Private
